# iregex

./: .gitignore  .pre-commit-config.yaml  .precommit.yaml  .travis.yml  Makefile  README.md  conf.py  index.rst  pyproject.toml  setup.cfg
_build/doctrees/: environment.pickle  index.doctree
_build/html/: genindex.html  py-modindex.html
_build/html/iregex/: consts.html
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: py-modindex.html  searchindex.js
docs/_build/html/iregex/: consts.html
docs/_sources/: index.rst.txt
docs/_sources/iregex/: consts.rst.txt  exceptions.rst.txt  regex.rst.txt
docs/doctrees/iregex/: consts.doctree  exceptions.doctree  regex.doctree
docs/html/: index.html  search.html  searchindex.js
docs/html/_static/: documentation_options.js
docs/html/iregex/: exceptions.html  regex.html
docs/iregex/: consts.rst  exceptions.html  exceptions.rst  regex.html  regex.rst
docsrc/: conf.py
iregex/: __init__.py  consts.py  exceptions.py  regex.py
iregex/tests/: test_regex_format.py  test_regex_results.py
py_idiomatic_regex/: __init__.py  consts.py  regex.py
py_idiomatic_regex/tests/: test_py_idiomatic_regex.py
