[tool.poetry]
name = "py_idiomatic_regex"
version = "0.1.0"
description = ""
authors = ["Ryan <ryanpeach@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.12.1"
flake8 = "^3.9.1"
mypy = "^0.812"
black = "^21.5b0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
