[tool.poetry]
name = "iregex"
version = "0.1.3"
description = "An idiomatic regex generator using OOP principals instead of long unreadable strings."
authors = ["Ryan <ryanpeach@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.12.1"
flake8 = "^3.9.1"
mypy = "^0.812"
black = "^21.5b0"
isort = "^5.8.0"
coverage = "^5.5"
Sphinx = "^3.5.4"
codecov = "^2.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
